--- a/PLAsTiCC_starting_kit.ipynb
+++ b/PLAsTiCC_starting_kit.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div>\n",
-    "[<img src=\"http://project.inria.fr/saclaycds/files/2017/02/logoUPSayPlusCDS_990.png\" width=\"600px\">](http://www.datascience-paris-saclay.fr)\n",
-    "</div>\n",
+    "<a href=\"http://www.datascience-paris-saclay.fr\">\n",
+    "<img src=\"img/logoUPSayPlusCDS_990.png\" width=\"600px\">\n",
+    "</a>\n",
     "\n",
     "# PLAsTiCC - RAMP: classification of astronomical transients\n",
     "\n",
